Updates to swagger and rename hosts type to network.
